Fix long titles and descriptions not breaking words causing overflow

--- a/src/wwwroot/css/tailwind-out.css
+++ b/src/wwwroot/css/tailwind-out.css
@@ -652,6 +652,10 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
+.break-words {
+  overflow-wrap: break-word;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
